--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <body>
 <p class=MsoNormal style='margin-bottom:10.0pt'><b style='mso-bidi-font-weight:
-normal'><span lang=EN style='font-size:14.0pt;line-height:115%'>Termite Control<o:p></o:p></span></b></p>
+normal'><span lang=EN style='font-size:14.0pt;line-height:115%'>Termite Treatments<o:p></o:p></span></b></p>
 
 <p class=MsoNormal style='margin-bottom:10.0pt'><b style='mso-bidi-font-weight:
 normal'><span lang=EN style='font-size:12.0pt;line-height:115%'>What are
